--- a/app/src/main/res/layout/item_update.xml
+++ b/app/src/main/res/layout/item_update.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
     android:orientation="vertical"
     android:weightSum="1">
 
@@ -10,9 +12,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
+        android:layout_marginLeft="6dp"
+        android:layout_toEndOf="@+id/profPic"
         android:layout_weight="0.05"
         android:paddingBottom="10dp"
         android:textColor="#000000"
         android:textSize="19sp" />
+
+    <ImageView
+        android:id="@+id/profPic"
+        android:layout_width="37dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="5dp"
+        app:srcCompat="@color/black" />
+
+    <View
+        android:id="@+id/bar"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/profPic"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/darker_gray" />
 
 </RelativeLayout>
