--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -30,6 +30,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <TextView
+                    android:id="@+id/notifHeader"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="36dp"
+                    android:layout_marginTop="6dp"
+                    android:text="Notifications"
+                    android:textColor="#000000"
+                    android:textSize="30sp" />
+
                 <ImageView
                     android:id="@+id/Home"
                     android:layout_width="30dp"
@@ -43,22 +53,13 @@
 
         </android.support.v7.widget.Toolbar>
 
-        <TextView
-            android:id="@+id/notifHeader"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/toolbar_notif"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="24dp"
-            android:text="Notifications"
-            android:textSize="36sp"
-            android:textColor="#000000"/>
+
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/nRecylerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/notifHeader"
+            android:layout_below="@+id/toolbar_notif"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
